--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,53 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 body {
-    background-color: white;
+    padding: 50px;
+    text-align: center;
+    background-color: gray;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: url('../images/NBA\ map.webp') no-repeat center center fixed;
+    background-size: cover;
+}
+
+.heading {
+    font-size: 60px;
+    color: white;
+}
+
+p {
+    font-size: 30px;
+    color: white;
+}
+
+#home,
+#questions {
+    background-color: gray;
+    box-sizing: border-box;
+    width: 85%;
+    height: 65vh;
+    max-height: 450px;
+    max-width: 830px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+    border: 4px solid black;
+    border-radius: 10px;
+}
+
+.logo {
+ width: 200px;
+}
+
+#home-btn {
+    color: white;
+    font-size: 50px;
 }
